--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "c:\\Users\\quentin\\Desktop\\furySyndrom",
+      "cwd": "c:/Users/quentin/Desktop/furySyndrom",
       "environment": [],
-      "program": "c:\\Users\\quentin\\Desktop\\furySyndrom\\build\\Debug\\outDebug",
+      "program": "c:/Users/quentin/Desktop/furySyndrom/build/Debug/outDebug",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "C:/MinGW/bin/gdb.exe",
