Ajout de l'interface option (non terminé)

--- a/Assets/Config/keybind.config
+++ b/Assets/Config/keybind.config
@@ -1,29 +1,25 @@
-player1_jump_key = 152
-player1_left_key = 148
-player1_right_key = 150
-player1_run_key = 144
-player1_attack_one_key = 145
-player1_attack_two_key = 147
-
-player2_jump_key = 54
-player2_left_key = 45
-player2_right_key = 32
-player2_run_key = 129
-player2_attack_one_key = 29
-player2_attack_two_key = 33
-
-player3_jump_key = 
-player3_left_key =
-player3_right_key =
-player3_run_key =
-player3_attack_one_key =
-player3_attack_two_key =
-
-player4_jump_key = 
-player4_left_key =
-player4_right_key =
-player4_run_key =
-player4_attack_one_key =
-player4_attack_two_key =
-
-
+#Sat Nov 27 00:29:06 CET 2021
+player3_right_key=
+player2_left_key=45
+player1_right_key=150
+player3_attack_one_key=
+player2_jump_key=54
+player2_attack_two_key=33
+player4_attack_one_key=
+player3_left_key=
+player1_attack_two_key=147
+player3_jump_key=
+player4_right_key=
+player4_run_key=
+player2_right_key=32
+player3_run_key=
+player1_attack_one_key=145
+player2_run_key=129
+player1_run_key=144
+player4_attack_two_key=
+player1_jump_key=152
+player2_attack_one_key=29
+player4_left_key=
+player1_left_key=148
+player3_attack_two_key=
+player4_jump_key=
